--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,6 @@ jobs:
       - name: Build and analyze
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"hoangminnam_testCI_95b8cea6-bffd-4acc-9d80-ecc31f6d697c" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://b821-113-23-51-143.ngrok-free.app"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"hoangminnam_testCI_95b8cea6-bffd-4acc-9d80-ecc31f6d697c" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url=" https://5e6f-58-186-240-14.ngrok-free.app"
           dotnet build
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
