--- a/.sonarlint/PetStoreProject.json
+++ b/.sonarlint/PetStoreProject.json
@@ -1,4 +1,4 @@
 {
-  "sonarQubeUri": "https://f90d-58-187-59-179.ngrok-free.app/",
+  "sonarQubeUri": " https://b089-219-100-37-245.ngrok-free.app",
   "projectKey": "hoangminnam_testCI_95b8cea6-bffd-4acc-9d80-ecc31f6d697c"
 }
