--- a/FAS.API/appsettings.json
+++ b/FAS.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=UNI-MINHBV-PC\\MSSQLSERVER01;Database=FAS_Database;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=FAS_Database;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "BaseUrl": "https://localhost:7057"
