--- a/FAS.BLL/FAS.BLL.csproj
+++ b/FAS.BLL/FAS.BLL.csproj
@@ -11,4 +11,7 @@
     <ProjectReference Include="..\FAS.Model\FAS.Model.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+	</ItemGroup>
 </Project>
